--- a/application/homeapi/view/index/top_auction.html
+++ b/application/homeapi/view/index/top_auction.html
@@ -1,7 +1,7 @@
 <section class="section-block">
   <div class="section-title clearfix">
-    <h1>拍卖专区<span class="section-subtitle">限时出售 | 性价比高</span></h1>
-    <a href="../auction/special_auction.html?is_start=true" class="float-right">查看详情》</a>
+    <h1>活动专区<span class="section-subtitle">限时出售 | 性价比高</span></h1>
+    <a href="../auction/special_auction?is_start=true" class="float-right">查看详情》</a>
   </div>
   <div class="top-auction product-card-list">
     <div class="top-auction-row no-gutters">
@@ -11,7 +11,7 @@
 
       <div class="top-auction-col col-big">
         <div class="product-card">
-          <a href="../auction/special_auction_detail.html?auction_id={$vo.id}">
+          <a href="../auction/special_auction_detail?auction_id={$vo.id}">
             <div class="product-card-img">
               <img src="{$vo.original_img}" alt="">
             </div>
@@ -33,7 +33,7 @@
       </div>
       <div class="top-auction-col col-big">
         <div class="product-card">
-          <a href="../auction/special_auction_detail.html?auction_id={$vo.id}">
+          <a href="../auction/special_auction_detail?auction_id={$vo.id}">
             <div class="product-card-img">
               <img src="{$vo.original_img}" alt="">
             </div>
@@ -56,7 +56,7 @@
         <div class="top-auction-col">
           <div class="product-card product-card__small">
             <div class="product-card-img">
-              <a href="../auction/special_auction_detail.html?auction_id={$vo.id}"><img src="{$vo.original_img}" alt=""></a>
+              <a href="../auction/special_auction_detail?auction_id={$vo.id}"><img src="{$vo.original_img}" alt=""></a>
             </div>
             <div class="product-card-content">
               <div class="row no-gutters">
