--- a/application/homeapi/view/parts/parts.html
+++ b/application/homeapi/view/parts/parts.html
@@ -1,52 +1,56 @@
-{include file="public/header" title="首页" bundle="home" hasBanner="true" activeNav="parts" /}
+{extend name="layout/base" /}
+{block name="title"}精品配件{/block}
+{block name="main"}
+<main class="o-wrapper main-wrapper hasSearch">
+  <!--顶部广告-->
+  {include file="public/top_ads" /}
 
-    <main class="o-wrapper main-wrapper hasSearch">
-      <!--顶部广告-->
-      {include file="public/top_ads" /}
+  <div class="container">
+    <section class="section-block pb-5">
+      {include file="public/parts-type-filter" /}
+      <div class="loader text-center" style="display: none">
+        <div class="loader-inner line-scale-pulse-out">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+      <div class="product-card-list row">
+        {foreach $parts_list as $key=>$vo}
+        <div class="col col-4">
+          <div class="product-card">
+            <div class="product-card-img">
+              <a href="../goods/parts_detail?goods_id={$vo['goods_id']}"><img src="{$vo.original_img}" alt=""></a>
+            </div>
 
-      <div class="container">
-        <section class="section-block pb-5">
-          {include file="public/parts-type-filter"  /}
-          <div class="loader text-center" style="display: none">
-            <div class="loader-inner line-scale-pulse-out">
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
+            <div class="product-card-content">
+              <h2 class="product-card-title">
+                {$vo.goods_name}
+                <span class="float-right">已订购：<strong class="color-primary">{$vo.sales_sum}</strong></span>
+              </h2>
+              <div class="product-card-intro"><strong>特点：</strong>{$vo.goods_remark}</div>
+              <div class="product-card-btm clearfix">
+                <div class="float-left product-card-price">
+                  <img src="__STATIC__/assets/images/common/icon-price.png" class="icon" alt="">
+                  <span>价格：<strong>{$vo.shop_price}</strong>元<span class="color-read"> {$vo.exchange_integral==1
+                      ?'（积分可用）': ''}</span></span>
+                </div>
+                <a class="product-card-btn c-btn c-btn__primary float-right" href="../goods/parts_detail?goods_id={$vo['goods_id']}">立即订购</a>
+              </div>
             </div>
           </div>
-          <div class="product-card-list row">
-            {foreach $parts_list as $key=>$vo}
-              <div class="col col-4">
-                <div class="product-card">
-                  <div class="product-card-img">
-                    <a href="../goods/parts_detail.html?goods_id={$vo['goods_id']}"><img src="{$vo.original_img}" alt=""></a>
-                  </div>
-                  
-                  <div class="product-card-content">
-                    <h2 class="product-card-title">
-                        {$vo.goods_name}
-                      <span class="float-right">已订购：<strong class="color-primary">{$vo.sales_sum}</strong></span>
-                    </h2>
-                    <div class="product-card-intro"><strong>特点：</strong>{$vo.goods_remark}</div>
-                    <div class="product-card-btm clearfix">
-                      <div class="float-left product-card-price">
-                        <img src="__STATIC__/assets/images/common/icon-price.png" class="icon" alt="">
-                        <span>价格：<strong>{$vo.shop_price}</strong>元<span class="color-read"> {$vo.exchange_integral==1 ?'（积分可用）': ''}</span></span>
-                      </div>
-                      <a class="product-card-btn c-btn c-btn__primary float-right" href="../goods/parts_detail.html?goods_id={$vo['goods_id']}">立即订购</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            {/foreach}
-          </div>
-          {include file="public/pagination" total="$total" size="9" /}
-        </section>
-
+        </div>
+        {/foreach}
       </div>
+      {include file="public/pagination" total="$total" size="9" /}
+      {empty name="parts_list"}
+        {include file="public/empty"/}    
+      {/empty}
+    </section>
 
-    </main>
-    {include file="public/side_btns" /}
-{include file="public/footer" /}
+  </div>
+
+</main>
+{/block}
