--- a/application/homeapi/view/public/car-type-filter.html
+++ b/application/homeapi/view/public/car-type-filter.html
@@ -13,7 +13,7 @@
       <label>{$data['name']}:</label>
       <ul class="filter" id="type-filter">
         {foreach $data['list'] as $list}
-        <li class="{$Think.get.cat_id == $list['id'] ? 'active' : ''}"><a href="__URL__/brand_models.html?cat_id={$list['id']}">{$list['name']}</a></li>
+        <li class="{$Think.get.cat_id == $list['id'] ? 'active' : ''}"><a href="__URL__/brand_models?cat_id={$list['id']}">{$list['name']}</a></li>
         {/foreach}
       </ul>
     </div>
@@ -24,7 +24,7 @@
         <li {if !$Think.get.sales_sum && !$Think.get.price} class="active" {/if}><a href="__URL__/brand_models.html" >默认</a></li>
         <li {if $Think.get.sales_sum } class="active" {/if}>
           <div class="sort-wrapper">
-            <span class="sort-txt"><a href="__URL__/brand_models.html?sales_sum={$Think.get.sales_sum == 'desc' ? 'asc' : 'desc'}">销量</a></span>
+            <span class="sort-txt"><a href="__URL__/brand_models?sales_sum={$Think.get.sales_sum == 'desc' ? 'asc' : 'desc'}">销量</a></span>
             <div class="lamp">
               <div class="icon-arr icon-arr__up {$Think.get.sales_sum == 'asc' ? 'active' : ''}"></div>
               <div class="icon-arr icon-arr__down {$Think.get.sales_sum == 'desc' ? 'active' : ''}"" ></div>
@@ -33,7 +33,7 @@
         </li>
         <li {if $Think.get.price} class="active" {/if}>
           <div class="sort-wrapper">
-            <span class="sort-txt"><a href="__URL__/brand_models.html?price={$Think.get.price == 'asc' ? 'desc' : 'asc'}">价格</a></span>
+            <span class="sort-txt"><a href="__URL__/brand_models?price={$Think.get.price == 'asc' ? 'desc' : 'asc'}">价格</a></span>
             <div class="lamp">
               <div class="icon-arr icon-arr__up {$Think.get.price == 'asc' ? 'active' : ''}"></div>
               <div class="icon-arr icon-arr__down {$Think.get.price == 'desc' ? 'active' : ''}"" ></div>
