--- a/application/homeapi/view/public/side_btns.html
+++ b/application/homeapi/view/public/side_btns.html
@@ -132,76 +132,4 @@
 </div>
 
 {include file="public/test-drive" /}
-
-<script>
-  var hasGetCity = false
-  function getDrivelistInline() {
-    getDrivelist(function(data) {
-      appendOptions('#loc-typelist', data, true)
-    })
-  }
-
-  function getProvinceInline(e) {
-    console.log(e.value)
-    getProvince(function(data) {
-      appendOptions('#loc-province', data)
-      if(!hasGetCity) {
-        getCityInline(data[0].id, null)
-        hasGetCity = true
-      }
-    })
-  }
-  
-  function appendOptions(id, data, isAppend) {
-    var html = ''
-    for(var x in data) {
-      var element = data[x]
-      html+= '<option value='+element.id+'>'+element.name+'</option>'
-    }
-    if(isAppend) {
-      $(id).append(html)
-    } else {
-      $(id).html(html)
-    }
-    $(".selectpicker").selectpicker('refresh')
-  }
-
-  function getCityInline(id, e) {
-    if(id) {
-      getCity(id, function(data) {
-        appendOptions('#loc-city', data)
-      })
-    } else {
-      getCity(e.value, function(data) {
-        appendOptions('#loc-city', data)
-      }) 
-    }
-  }
-
-  function getSalesInline() {
-    var cate_id2 = $('#loc-typelist').val()
-    var province = $('#loc-province').val()
-    var city = $('#loc-city').val()
-
-    querySales({
-      cate: cate_id2,
-      province: province,
-      city: city
-    }, function(data) {
-      if(data instanceof Array && data.length>0) {
-        var html = ''
-        for(var x in data) {
-          var element = data[x]
-          html += '<li><h5>'+element.name+'</h5><p>'+element.address+'</p><p>'+element.mobile+'</p></li>'
-        }
-        $('#dealerList').html(html)
-      } else {
-        $('#dealerList').html('<p class="text-center">暂无经销商</p>')
-      }
-    })
-  }
-
-  $(function() {
-    getDrivelistInline()
-  })
-</script>
+<script src="__STATIC__/utils/side_btns.js"></script>
