--- a/application/homeapi/view/public/three_box.html
+++ b/application/homeapi/view/public/three_box.html
@@ -7,7 +7,7 @@
     </div>
     <div class="col text-center">
       <div class="three-box-item text-center">
-        <a href="../auction/special_auction.html?is_start=true" style="background-image:url(__STATIC__/assets/images/ad-2.jpg)"></a>
+        <a href="../auction/special_auction?is_start=true" style="background-image:url(__STATIC__/assets/images/ad-2.jpg)"></a>
       </div>
     </div>
     <div class="col text-center">
