--- a/application/homeapi/view/auction/special_auction.html
+++ b/application/homeapi/view/auction/special_auction.html
@@ -1,5 +1,6 @@
-{include file="public/header" title="特价拍卖" bundle="home" hasBanner="true" activeNav="home" /}
-
+{extend name="layout/base" /}
+{block name="title"}特价拍卖{/block}
+{block name="main"}
 <main class="o-wrapper main-wrapper hasSearch">
   <!--顶部广告-->
   {include file="public/top_ads" /}
@@ -15,8 +16,8 @@
       </div>
 
       <ul class="tab-nav">
-        <li class="{$Think.get.is_start == 'true' ? 'active' : '' }"><a href="../auction/special_auction.html?is_start=true" >正在拍卖</a></li>
-        <li class="{$Think.get.is_start == 'false' ? 'active' : '' }"><a href="../auction/special_auction.html?is_start=false">待拍卖</a></li>
+        <li class="{$Think.get.is_start == 'true' ? 'active' : '' }"><a href="../auction/special_auction?is_start=true" >正在拍卖</a></li>
+        <li class="{$Think.get.is_start == 'false' ? 'active' : '' }"><a href="../auction/special_auction?is_start=false">待拍卖</a></li>
       </ul>
       <div class="pt-4">
         <div class="loader text-center" style="display: none;position: absolute;left:0;z-index: 20;">
@@ -33,7 +34,7 @@
           <div class="col col-4">
             <div class="product-card">
               <div class="product-card-img">
-                <a  href="../auction/special_auction_detail.html?auction_id={$vo.id}"><img src="{$vo.original_img}" width="100%" alt=""></a>
+                <a  href="../auction/special_auction_detail?auction_id={$vo.id}"><img src="{$vo.original_img}" width="100%" alt=""></a>
               </div>
               <div class="product-card-content">
                 <h2 class="product-card-title">
@@ -45,13 +46,17 @@
                     <img src="__STATIC__/assets/images/common/icon-price.png" class="icon" alt="">
                     <span>起拍价: <strong>{$vo.price}</strong>元</span>
                   </div>
-                  <a class="product-card-btn c-btn c-btn__primary float-right" href="../auction/special_auction_detail.html?auction_id={$vo.id}">{$Think.get.is_start == 'false' ? '立即预约' : '立即拍' }</a>
+                  <a class="product-card-btn c-btn c-btn__primary float-right" href="../auction/special_auction_detail?auction_id={$vo.id}">{$Think.get.is_start == 'false' ? '立即预约' : '立即拍' }</a>
                 </div>
               </div>
             </div>
           </div>
           {/foreach}
         </div>
+
+        {empty name="data"}
+          {include file="public/empty"/}    
+        {/empty}
       </div>
       <div class="pb-5">
           {include file="public/pagination" total="$total" size="6" /}
@@ -67,9 +72,8 @@
   </div>
 
 </main>
-
-{include file="public/side_btns" /}
-
+{/block}
+{block name="foot_script"}
 <script>
     var api = '../auction/special_auction_list?is_start={$Think.get.is_start}'
     function getList(page) {
@@ -88,7 +92,7 @@
             html +=  '<div class="col col-4">\n' +
               '            <div class="product-card">\n' +
               '              <div class="product-card-img">\n' +
-              '                <a href="__URL__/special_auction_detail.html?auction_id='+element["id"]+'"><img src="'+element['original_img']+'" alt=""></a>\n' +
+              '                <a href="__URL__/special_auction_detail?auction_id='+element["id"]+'"><img src="'+element['original_img']+'" alt=""></a>\n' +
               '              </div>\n' +
               '              <div class="product-card-content">\n' +
               '                <h2 class="product-card-title">\n' +
@@ -101,7 +105,7 @@
               '                    <img src="__STATIC__/assets/images/common/icon-price.png" alt="">\n' +
               '                    <span>起拍价：<strong>'+element['price']+'</strong>元</span>\n' +
               '                  </div>\n' +
-              '                  <a class="product-card-btn c-btn c-btn__primary float-right" href="__URL__/special_auction_detail.html?auction_id='+element["id"]+'">立即购买</a>\n' +
+              '                  <a class="product-card-btn c-btn c-btn__primary float-right" href="__URL__/special_auction_detail?auction_id='+element["id"]+'">立即购买</a>\n' +
               '                </div>\n' +
               '              </div>\n' +
               '            </div>\n' +
@@ -114,5 +118,4 @@
     }
   </script>
 
-
-{include file="public/footer" /}
+{/block}
