--- a/application/homeapi/view/integral_mall/integral_mall.html
+++ b/application/homeapi/view/integral_mall/integral_mall.html
@@ -1,5 +1,6 @@
-{include file="public/header" title="特价拍卖" bundle="home" hasBanner="true" activeNav="integral" /}
-
+{extend name="layout/base" /}
+{block name="title"}积分商城{/block}
+{block name="main"}
 <main class="o-wrapper main-wrapper hasSearch">
   <!--顶部广告-->
   {include file="public/top_ads" /}
@@ -20,7 +21,7 @@
           <div class="clearfix">
             <h3 class="d-inline text-remain">剩余：<label>{$recommend_car.store_count}件</label></h3>
 
-            <a href="../integral/integral_mall_detail.html?goods_id={$recommend_car.goods_id}" class="btn btn-danger text-center float-right">
+            <a href="../integral/integral_mall_detail?goods_id={$recommend_car.goods_id}" class="btn btn-danger text-center float-right">
               立即兑换<br />
               <span>积分: {$recommend_car.integral}积分</span>
             </a>
@@ -34,7 +35,7 @@
         <div class="col col-4">
           <div class="product-card">
             <div class="product-card-img">
-              <a href="../integral/integral_mall_detail.html?goods_id={$gd.goods_id}"><img src="{$gd.original_img}" width="100%" style="height: auto" alt=""></a>
+              <a href="../integral/integral_mall_detail?goods_id={$gd.goods_id}"><img src="{$gd.original_img}" width="100%" style="height: auto" alt=""></a>
             </div>
             <div class="product-card-content">
               <h2 class="product-card-title">
@@ -47,7 +48,7 @@
                   <span>积分：<strong>{$gd.integral}</strong>积分</span>
                   <span>剩余：<em>{$gd.store_count}</em></span>
                 </div>
-                <a class="product-card-btn c-btn c-btn__primary float-right" href="../integral/integral_mall_detail.html?goods_id={$gd.goods_id}">立即兑换</a>
+                <a class="product-card-btn c-btn c-btn__primary float-right" href="../integral/integral_mall_detail?goods_id={$gd.goods_id}">立即兑换</a>
               </div>
             </div>
           </div>
@@ -56,10 +57,13 @@
         {/foreach}
       </div>
       {include file="public/pagination" total="$total" size="6" /}
+      {empty name="list"}
+        {include file="public/empty"/}    
+      {/empty}
     </section>
 
   </div>
 
 </main>
-{include file="public/side_btns" /}
-{include file="public/footer" /}
+
+{/block}
