--- a/application/homeapi/view/public/footer.html
+++ b/application/homeapi/view/public/footer.html
@@ -56,43 +56,4 @@
 </footer>
 <script src="https://cdn.bootcss.com/babel-polyfill/7.2.5/polyfill.min.js"></script>
 <script src="__STATIC__/scripts/common.bundle.js?v=201901181134"></script>
-{notempty name="bundle"} 
-  <script src="__STATIC__/scripts/{$bundle}.bundle.js?v=20190112"></script>
-{/notempty}
-<script>
-  function getDrivelist(cb) {
-    Apitool.drive.getDrivelist().then(function(res){
-      cb(res.data)
-    })
-  }
-
-
-  function getProvince(cb) {
-    Apitool.drive.getProvince().then(function(res){
-      cb(res.data)
-    })
-  }
-
-  function getCity(id, cb) {
-    Apitool.drive.getCity(id).then(function(res){
-      console.log(res)
-      cb(res.data)
-    })
-  }
-
-  function queryDealers(params, cb) {
-    Apitool.drive.queryDealers(params.cate, params.province, params.city).then(function(res) {
-      console.log(res)
-      cb(res.data)
-    })
-  }
-
-  function querySales(params, cb) {
-    Apitool.drive.querySales(params.cate, params.province, params.city).then(function(res) {
-      console.log(res)
-      cb(res.data)
-    })
-  }
-</script>
-</body>
-</html>
+<script src="__STATIC__/utils/tools.js"></script>
