--- a/application/homeapi/view/usercenter/login.html
+++ b/application/homeapi/view/usercenter/login.html
@@ -30,7 +30,7 @@
                     <input type="password" v-model="loginPwd" class="form-control" placeholder="密码">
                   </div>
                   <div class="form-group clearfix">
-                    <a href="../index/forgot.html" class="float-right">忘记密码</a>
+                    <a href="../index/forgot" class="float-right">忘记密码</a>
                   </div>
                   <div class="actions">
                     <a class="c-btn c-btn__primary login-btn" @click="login" href="javasript:void(0)">登录</a>
