--- a/application/homeapi/view/usercenter/user_setting.html
+++ b/application/homeapi/view/usercenter/user_setting.html
@@ -1,175 +1,141 @@
-{include file="public/header" title="首页" bundle="user-center" hasBanner="false" activeNav="usercenter" /}
-    <main class="o-wrapper main-wrapper">
-      <div class="container">
-        <section class="user-center">
-          <div class="row">
-            <div class="col-3">
-              <div class="user-info">
-                <div class="user-info__header">
-                  <div class="avatar">
-                    <img src="{$user.head_pic}" alt="">
-                  </div>
-                  <div class="phone">{$user.mobile}</div>
-                  <div class="drawer row">
-                    <div class="drawer-item col-6">
-                      <div class="drawer-item__top">最近浏览</div>
-                      <div class="drawer-item__bottom">123</div>
-                    </div>
-                    <div class="drawer-item col-6">
-                      <div class="drawer-item__top">我的积分</div>
-                      <div class="drawer-item__bottom">{$user.pay_point}</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="user-info__body">
-                  <div class="row base-col">
-                    <div class="col-5 base-col__left">出生日期:</div>
-                    <div class="col-7 base-col__right">{$user.birthday}</div>
-                  </div>
-                  <div class="row base-col">
-                    <div class="col-5 base-col__left">所在地:</div>
-                    <div class="col-7 base-col__right">{$user.address}</div>
-                  </div>
-                  <div class="row base-col">
-                    <div class="col-5 base-col__left">邮箱:</div>
-                    <div class="col-7 base-col__right">{$user.email}</div>
-                  </div>
-                </div>
-                <div class="user-info__footer">
-                  <div class="row">
-                    <div class="col-6 btn-col">
-                      <a class="c-btn c-btn__primary c-btn--small" href="javascript:void(0)" data-toggle="modal" data-target="#testDriveForm">
-                        <img src="__STATIC__/assets/images/common/icon-test-drive.png" class="icon" width="20" height="20" alt="">
-                        立即预约
-                      </a>
-                    </div>
-                    <div class="col-6 btn-col">
-                      <a class="c-btn c-btn__success c-btn--small"  href="javascript:void(0)" {if $is_sign} id="checkin" {/if} >
-                        <img src="__STATIC__/assets/images/common/sign.png" class="icon" width="20" height="20" alt="">
-                        {if $is_sign} 
-                          已签到
-                        {else /}
-                          签到
-                        {/if} 
-                      </a>
-                    </div>
-                  </div>
-                </div>
-                <img src="__STATIC__/assets/images/common/setting.png" class="user-info__setting" alt="" id="setting">
+{extend name="layout/base" /}
+{block name="title"}用户信息设置{/block}
+{block name="search"}{/block}
+{block name="side_btns"}{/block}
+{block name="main"}
+{php} 
+  $year = substr($user['birthday'], 0, 4);
+  $month = substr($user['birthday'], 4, 2);
+  $day = substr($user['birthday'], -1, 2);
+{/php}
+<main class="o-wrapper main-wrapper">
+  <div class="container">
+    <section class="user-center">
+      <div class="row">
+        <div class="col-3">
+          {include file="usercenter/user_left" /}
+        </div>
+        <div class="col-9">
+          <div class="user-info-edit" id="user-info" style="display:block">
+            <div class="user-info-edit__header">
+              <div class="cancel-editing" id="cancel-edit">
+                <a href="__URL__/user_center.html"><img src="__STATIC__/assets/images/common/back.png" class="icon" alt="">
+                  取消编辑</a>
               </div>
             </div>
-            <div class="col-9">
-                <div class="user-info-edit" id="user-info" style="display:block">
-                    <div class="user-info-edit__header">
-                      <div class="cancel-editing" id="cancel-edit">
-                        <a href="__URL__/user_center.html"><img src="__STATIC__/assets/images/common/back.png" class="icon" alt="">
-                        取消编辑</a>
-                      </div>
-                    </div>
-                    <div class="user-info-edit__body">
-                      <form>
-                        <div class="form-group row">
-                          <label
-                            for="staticEmail"
-                            class="col-2 col-form-label col-form-label-sm u-text-right"
-                          >
-                            账号昵称:
-                          </label>
-                          <div class="col-6">
-                            <input type="text" class="form-control form-control-sm" id="staticEmail">
-                          </div>
-                        </div>
-                        <div class="form-group row">
-                          <label
-                            class="col-2 col-form-label col-form-label-sm u-text-right"
-                          >
-                            出生年月:
-                          </label>
-                          <div class="col-6">
-                            <div class="row">
-                              <div class="col-4">
-                                <div class="select-box">
-                                 <select 
-                                  class="selectpicker form-control form-control-sm select-major" 
-                                  data-style="my-select"
-                                  id="year"
-                                >
-                                 </select>
-                                 <span class="select-des">年</span>
-                                </div>
-                              </div>
-                              <div class="col-4">
-                                <div class="select-box">
-                                 <select 
-                                  class="selectpicker form-control form-control-sm select-major" 
-                                  data-style="my-select"
-                                  id="month"
-                                >
-                                 </select>
-                                 <span class="select-des">月</span>
-                                </div>
-                              </div>
-                              <div class="col-4">
-                                <div class="select-box">
-                                 <select 
-                                  class="selectpicker form-control form-control-sm select-major" 
-                                  data-style="my-select"
-                                  id="day"
-                                >
-                                 </select>
-                                 <span class="select-des">日</span>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="form-group row">
-                          <label
-                            for="address"
-                            class="col-2 col-form-label col-form-label-sm u-text-right"
-                          >
-                            所在地:
-                          </label>
-                          <div class="col-6">
-                            <input type="password" class="form-control form-control-sm" id="address">
-                          </div>
-                        </div>
-                        <div class="form-group row">
-                          <label
-                            for="email"
-                            class="col-2 col-form-label col-form-label-sm u-text-right"
-                          >
-                            邮箱:</label>
-                          <div class="col-6">
-                            <input type="password" class="form-control form-control-sm" id="email">
-                          </div>
-                        </div>
-                        <div class="form-group row">
-                          <label
-                            for="email"
-                            class="col-2 col-form-label col-form-label-sm u-text-right"
-                          ></label>
-                          <div class="col-6">
-                            <div class="user-info-edit__footer">
-                              <a class="c-btn c-btn__primary c-btn--small" href="javascript:;">
-                                确认编辑
-                              </a>
-                              <a class="c-btn c-btn__success c-btn--small" href="javascript:;">
-                                绑定编辑
-                              </a>
-                            </div>
-                          </div>
-                        </div>
-                      </form>
+            <div class="user-info-edit__body">
+                <div class="form-group row">
+                    <label for="staticEmail" class="col-2 col-form-label col-form-label-sm u-text-right">
+                      账号昵称:
+                    </label>
+                    <div class="col-6">
+                      <input type="text" class="form-control form-control-sm" value="{$user.nickname}" autocomplete="off" id="formNickname">
                     </div>
                   </div>
-                  
+                  <div class="form-group row">
+                    <label class="col-2 col-form-label col-form-label-sm u-text-right">
+                      出生日期:
+                    </label>
+                    <div class="col-6">
+                      <div class="row">
+                        <div class="col-4">
+                          <div class="select-box">
+                            <select class="selectpicker form-control form-control-sm select-major sel_year" rel="{$year}" data-style="my-select"
+                              id="formYear">
+                            </select>
+                            <span class="select-des">年</span>
+                          </div>
+                        </div>
+                        <div class="col-4">
+                          <div class="select-box">
+                            <select class="selectpicker form-control form-control-sm select-major sel_month" rel="{$month}" data-style="my-select"
+                              id="formMonth">
+                            </select>
+                            <span class="select-des">月</span>
+                          </div>
+                        </div>
+                        <div class="col-4">
+                          <div class="select-box">
+                            <select class="selectpicker form-control form-control-sm select-major sel_day" rel="{$day}" data-style="my-select"
+                              id="formDay">
+                            </select>
+                            <span class="select-des">日</span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <label for="email" class="col-2 col-form-label col-form-label-sm u-text-right">
+                      邮箱:</label>
+                    <div class="col-6">
+                      <input type="text" class="form-control form-control-sm" value="{$user.email}" id="formEmail">
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <label for="email" class="col-2 col-form-label col-form-label-sm u-text-right"></label>
+                    <div class="col-6">
+                      <div class="user-info-edit__footer">
+                        <button class="c-btn c-btn__primary c-btn--small " id="btnSave" href="javascript:;" onclick="postProfolio()">
+                          保存设置
+                        </button>
+                      </div>
+                    </div>
+                  </div>
             </div>
           </div>
-        </section>
 
+        </div>
       </div>
+    </section>
 
-    </main>
-    {include file="public/test-drive" /}
-    {include file="public/footer" /}
+  </div>
+
+</main>
+{include file="public/test-drive" /}
+{/block}
+
+{block name="foot_script"}
+<script src="__STATIC__/utils/birthday.js"></script>
+<script>
+var btnSave = $('#btnSave');
+function postProfolio() {
+  btnSave.attr('disabled', true)
+  btnSave.text('保存中...')
+  var nickname = $('#formNickname').val()
+  var year = $('#formYear').val()
+  var month = $('#formMonth').val()
+  var day = $('#formDay').val()
+  var email = $('#formEmail').val()
+  if(+month < 10) {
+    month='0'+month
+  }
+  if(+day < 10) {
+    day='0'+day
+  }
+  Apitool.usercenter.setUserinfo({
+    nickname: nickname, 
+    year: year, 
+    month: month, 
+    day:day, 
+    email:email}).then(function(res) {
+      if(typeof res.data === "boolean" && res.data) {
+        alert('修改成功')
+        location.reload()
+      } else {
+        alert(res.message)
+      }
+      btnSave.attr('disabled', false)
+      btnSave.text('保存设置')
+  })
+}
+$(function () {
+	$.ms_DatePicker({
+      YearSelector: ".sel_year",
+      MonthSelector: ".sel_month",
+      DaySelector: ".sel_day"
+  });
+});
+</script>
+
+{/block}
